--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -2,6 +2,11 @@ html,
 body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+.blog-preview {
+    margin: 15px;
+}
+
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
