--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -4,10 +4,16 @@
 .form-btn-group {
   float: right; }
 
+.alert {
+  padding: 20px;
+  color: white;
+  border-radius: 3px; }
+  .alert.alert-danger {
+    background-color: #f44336; }
+
 .btn {
   border: none;
   color: white;
-  padding: 10px 30px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
