--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -41,6 +41,15 @@ input[type=text] {
   border-radius: 4px;
   box-sizing: border-box; }
 
+input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box; }
+
 textarea {
   width: 100%;
   padding: 12px 20px;
