--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -59,4 +59,35 @@ textarea {
   border-radius: 4px;
   box-sizing: border-box; }
 
+#app {
+  width: 75%;
+  margin: auto; }
+
+#navbar {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px; }
+  #navbar .navbar {
+    padding-left: 12px;
+    padding-right: 12px; }
+    #navbar .navbar .navbar-menu .navbar-start {
+      margin: auto; }
+  #navbar .navbar-image {
+    height: 350px;
+    overflow: hidden; }
+
+.header-separator {
+  margin: 8px;
+  border-top: 2px solid #3f3f3f; }
+
+.site-header {
+  font-size: 100px;
+  text-align: center; }
+
+.sign-out {
+  position: absolute;
+  right: 10px;
+  top: 7px; }
+
 /*# sourceMappingURL=styles.css.map */
