--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -71,8 +71,10 @@ textarea {
   #navbar .navbar {
     padding-left: 12px;
     padding-right: 12px; }
-    #navbar .navbar .navbar-menu .navbar-start {
-      margin: auto; }
+    #navbar .navbar .navbar-menu {
+      margin-right: 0; }
+      #navbar .navbar .navbar-menu .navbar-start {
+        margin: auto; }
   #navbar .navbar-image {
     height: 350px;
     overflow: hidden; }
