--- a/resources/public/scss/styles.scss
+++ b/resources/public/scss/styles.scss
@@ -101,6 +101,8 @@ h1 {
         padding-right: 12px;
 
         .navbar-menu {
+            margin-right: 0;
+
             .navbar-start {
                 margin :auto;
             }
