--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -106,4 +106,10 @@ textarea {
   right: 10px;
   top: 7px; }
 
+.text-icon {
+  top: 6px;
+  position: relative; }
+  .text-icon.clickable:hover {
+    cursor: pointer; }
+
 /*# sourceMappingURL=styles.css.map */
