--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -112,4 +112,20 @@ textarea {
   .text-icon.clickable:hover {
     cursor: pointer; }
 
+.preview-date {
+  text-align: right;
+  position: absolute;
+  right: 0;
+  margin-top: 5px; }
+
+.fixed-float {
+  position: fixed;
+  right: 13%;
+  bottom: 30px;
+  margin: 0% auto;
+  text-align: center;
+  box-shadow: 1px 2px 3px #999; }
+  .fixed-float > button {
+    margin: 0; }
+
 /*# sourceMappingURL=styles.css.map */
