--- a/resources/public/scss/styles.scss
+++ b/resources/public/scss/styles.scss
@@ -161,3 +161,23 @@ body {
         }
     }
 }
+
+.preview-date {
+    text-align: right;
+    position: absolute;
+    right: 0;
+    margin-top: 5px;
+}
+
+.fixed-float {
+    position: fixed;
+    right: 13%;
+    bottom: 30px;
+    margin: 0% auto;
+    text-align: center;
+    box-shadow: 1px 2px 3px #999;
+
+    > button {
+        margin: 0
+    }
+}
