--- a/resources/public/scss/styles.scss
+++ b/resources/public/scss/styles.scss
@@ -136,12 +136,12 @@ body {
 }
 
 .header-separator {
-    margin: 8px;
+    margin: 0px;
     border-top: 2px solid $light-dark;
 }
 
 .site-header {
-    font-size: 100px;
+    font-size: 90px;
     text-align: center;
 }
 
@@ -165,7 +165,7 @@ body {
 .preview-date {
     text-align: right;
     position: absolute;
-    right: 0;
+    right: 20px;
     margin-top: 5px;
 }
 
@@ -180,4 +180,8 @@ body {
     > button {
         margin: 0
     }
+}
+
+#app {
+    font-size: 14px;
 }
